# Accounts-Management

./: .gitignore  CMakeLists.txt  README.md  labels.txt  mainwindow.cpp  mainwindow.h  resources.qrc
libs/: account.cpp  account.h  database.cpp  database.h  labels.cpp  labels.h  labels.txt  transaction.cpp  transaction.h
